--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,8 +3,8 @@ spring:
     name: dream-shops
   datasource:
     url: jdbc:mysql://localhost:3306/dream_shops_db
-    username: springstudent
-    password: springstudent
+    username: root
+    password: password
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     properties:
