--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,7 +18,9 @@ spring:
     multipart:
       max-file-size: 5MB
       max-request-size: 5MB
-api:
-  prefix: /api/v1
-
+#api:
+#  prefix: /api/v1
+server:
+  servlet:
+    context-path: /api/v1
 
